# simultaneobs

./: .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/simultaneobs/: index.rst
licenses/: LICENSE.rst
simultaneobs/: scraps.py  simultaneobs.py
simultaneobs/tests/: test_full.py
