[metadata]
name = simultaneobs
author = Matteo Bachetti
author_email = matteo@matteobachetti.it
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/matteobachetti/simultaneobs
description = List all (quasi-)simultaneous observations between high-energy missions
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = matteobachetti/simultaneobs

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    astroquery
    pyvo
    numpy
    h5py


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy


[options.package_data]
simultaneobs = data/*


[options.entry_points]
console_scripts =
    simultaneobs = simultaneobs.simultaneobs:main
    simultaneobs_summary = simultaneobs.simultaneobs:summary


[tool:pytest]
testpaths = "simultaneobs" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    simultaneobs/_astropy_init*
    simultaneobs/conftest.py
    simultaneobs/*setup_package*
    simultaneobs/tests/*
    simultaneobs/*/tests/*
    simultaneobs/extern/*
    simultaneobs/version*
    */simultaneobs/_astropy_init*
    */simultaneobs/conftest.py
    */simultaneobs/*setup_package*
    */simultaneobs/tests/*
    */simultaneobs/*/tests/*
    */simultaneobs/extern/*
    */simultaneobs/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
